# afr-example-mcuboot-rollback

./: .gitignore  .gitmodules  README.md
blinky_cm4/: CMakeLists.txt  Makefile  main.c
blinky_cm4/source/: led.c  led.h
bootloader_cm0p/: .cyignore  Makefile  app.mk  cy_serial_flash_prog.c  main.c
bootloader_cm0p/COMPONENT_CUSTOM_DESIGN_MODUS/TARGET_CY8CKIT-062S2-43012/: design.modus
bootloader_cm0p/COMPONENT_CUSTOM_DESIGN_MODUS/TARGET_CY8CPROTO-062-4343W/: design.modus
bootloader_cm0p/config/mcuboot_config/: mcuboot_config.h
bootloader_cm0p/linker_script/TARGET_CY8CKIT-062S2-43012/TOOLCHAIN_GCC_ARM/: cy8c6xxa_cm0plus.ld
common/: ext_flash_map.c
common/config_files/: aws_demo_config.h  trcConfig.h  trcSnapshotConfig.h
common/include/: aws_application_version.h
common/make_support/: afr.mk  mtb_afr_source.mk  mtb_cypress_source.mk  mtb_feature_ota.mk  mtb_global_settings.mk  shared_config.mk
common/script/: requirements.txt  start_ota.py
factory_cm4/: CMakeLists.txt  Makefile  main.c
factory_cm4/source/: led_task.c  led_task.h  network_cfg.c  network_cfg.h  state_mgr.c  state_mgr.h
